public/src/css/common.css
/* Sticky footer styles
-------------------------------------------------- */
@charset "UTF-8";


html,
body {
  color: #282323;
  font-family: 'Open Sans', sans-serif;
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
  color: #373D42;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

.semi-bold {
  font-weight: 600;
}

#bitmark-logo {
  padding: 12px;
  width: 40px;
}
#bitmark-logo img {
  width: 40px;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
.ng-cloak, .x-ng-cloak,
.ng-hide {
  display: none !important;
}

/* Styling for the ngProgress itself */
#ngProgress {
  background-color: #22262e !important;
  box-shadow: none !important;
  color: #373D42 !important;
  height: 3px !important;
  margin: 0;
  opacity: 0;
  padding: 0;
  z-index: 99998;

  /* Add CSS3 styles for transition smoothing */
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}

/* Styling for the ngProgress-container */
#ngProgress-container {
  position: fixed;
  margin: 0;
  padding: 0;
  top: 63px;
  left: 0;
  right: 0;
  z-index: 99999;
}

/* QR modal */
#qr-canvas { display: none; }
#qrcode-scanner-video {
  margin: 0 auto 10px auto;
  display: block;
}
#file-input-wrapper {
  padding: 0;
  width: 100%;
}
#file-input-wrapper input {
  opacity: 0;
  padding: 5px;
}
#file-input-wrapper span {
  padding-top: 5px;
  width: 100%;
}
#file-input-wrapper i { display: none; }

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto;
  /* Negative indent footer by its height */
  margin: 0 auto -51px;
  /* Pad bottom by footer height */
  padding: 0 0 75px;
}

.m10h { margin: 0 10px; }
.m20h { margin: 0 20px; }
.m5v { margin: 5px 0; }
.m20v { margin: 20px 0; }
.m10v { margin: 10px 0; }
.m50v { margin: 50px 0; }
.m10b { margin-bottom: 10px; }
.m10l { margin-left: 10px; }
.vm { vertical-align: middle; }
.pa {position: absolute;}
.pr {position: relative;}

.bgwhite {
  background-color: white;
}

.btn-group .btn+.btn, .btn-group .btn+.btn-group, .btn-group .btn-group+.btn, .btn-group .btn-group+.btn-group {
margin-left: 0;
}

.table-hover>tbody>tr:hover>td, .table-hover>tbody>tr:hover>th {
  background-color: #F0F7E2;
}
.navbar { min-height: 64px; }
.navbar-default .navbar-toggle { 
  border-color: #fff;
  margin-top: 15px;
}

.navbar-default .navbar-toggle .icon-bar { background-color: #fff; }
.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {background-color: #373D42;}

.navbar-default {
  background-color: #1b1e24;
  margin: 0;
  border: 0;
}

.navbar-default .navbar-nav>li>a {
  color: #F4FBE8;
  font-family: 'Open Sans', sans-serif;
  padding-left: 25px;
  padding-right: 25px;
}

.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus {
  background-color: #22262e;
  color: #fff;
}

.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>.active>a:hover {
  background-color: #fff;
}

.navbar-form .form-group {
  display: block;
}

.navbar-form {
  /*width: 35%;*/
  margin-top: 15px;
}

@media (max-width: 991px) {
  .status {
    display: none;
  }
}

@media (max-width: 767px) {
  .navbar-form {
    width: auto;
  }
  .status {
    display: none;
  }
}

.nav-tabs.nav-justified>li>a:hover {
  cursor: pointer;
}

.insight {
  font-family: 'Open Sans', sans-serif;
  font-size: 34px;
  font-style: italic;
  font-weight: 700;
  overflow: hidden;
}

.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
  color: #fffffe;
}

.navbar-default .navbar-brand {
  color: #FFFFFF;
  padding: 20px 15px;
}

.navbar-form .form-control {
  background-color: #22262e;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border: 0;
  -webkit-box-shadow: 1px 1px 0px 0px rgba(255,255,255,0.41), inset 1px 1px 3px 0px rgba(0,0,0,0.10);
  -moz-box-shadow:    1px 1px 0px 0px rgba(255,255,255,0.41), inset 1px 1px 3px 0px rgba(0,0,0,0.10);
  box-shadow:         1px 1px 0px 0px rgba(255,255,255,0.41), inset 1px 1px 3px 0px rgba(0,0,0,0.10);
}

.navbar-nav>li>a {
  padding-top: 22px;
  padding-bottom: 22px;
}

#search-form { color: #fff; }

#search { font-family: 'Open Sans', sans-serif; }

#search.loading {
  background-image: url('/img/loading.gif');
  background-position: 5px center;
  background-repeat: no-repeat;
  padding-left: 25px;
}

.loader-gif {
  display: inline-block;
  width: 16px;
  height: 11px;
  background: transparent url(../img/loading.gif) no-repeat;
  margin-left: 5px;
}

#search::-webkit-input-placeholder {
  color: #8b91a0;
  font-family: 'Open Sans', sans-serif;
  font-size: 13px;
  font-weight: 300;
}

#search::-moz-placeholder {
  color: #8b91a0;
  font-family: 'Open Sans', sans-serif;
  font-size: 13px;
  font-weight: 300;
}

.status {
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  background-color: #22262e;
  border: 1px solid #424346;
  border-radius: 3px;
  margin: 15px 0;
  padding: 8px 10px;
  font-size: 12px;
  color: #eee;
  text-align: center;
  margin-right: 10px;
}

.status .tooltip {
  margin: 0;
}

.col-gray {
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  background-color: #F4F4F4;
  border-radius: 5px;
  padding: 14px;
  border: 1px solid #eee;
}

.col-gray-responsive {
  width: auto;
}

.col-gray-fixed {
  margin-top: 15px;
  position: fixed;
  width: 250px;
  border: 1px solid #eee;
  z-index: 1;
}

@media (max-width: 768px) {
  .col-gray-fixed {
    width:100%;
  }
}

@media (max-width: 995px) {
  .col-gray-fixed {
    position:static;
    width: 100%;
  }
}

@media (min-width: 1200px) {
  .col-gray-fixed {
    width: 280px;
  }
}

.ellipsis {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.line20 {
  border: 1px solid #D4D4D4;
  margin-bottom: 15px;
}
/* ... */

